# mhc-deepseek-implementation

./: .gitignore  README.md  pyproject.toml
scripts/: download_dataset.py  eval_perplexity.py  ollama_compare.py  train_mhc_gpt2.py
src/mhc/: __init__.py  mhc.py  profiling.py  rmsnorm.py  sinkhorn.py  stream_ops.py
src/mhc/transformers/: __init__.py  convert_gpt2.py  gpt2_mhc.py
tests/: test_gpt2_conversion_equivalence.py  test_mhc_gpt2_smoke.py  test_mhc_identity.py  test_sinkhorn.py
