[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhc-deepseek"
version = "0.1.0"
description = "PyTorch implementation of mHC (Manifold-Constrained Hyper-Connections) with HuggingFace GPT-2 integration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mhc-deepseek contributors" }]

dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
  "transformers>=4.40",
  "safetensors>=0.4",
  "accelerate>=0.30",
  "datasets>=2.19",
  "tqdm>=4.66",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
]
ollama = [
  "ollama>=0.1.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true


